# start

./: compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: config.py  db.py  main.py  redis_db.py  security.py
backend/backend/routers/: users.py  vacancies.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/Components/: Footer.tsx  HomeCard.tsx  Icon.tsx  Nav.tsx
frontend/src/Pages/: HomePage.tsx
frontend/src/components/: AboutSection.tsx  AnnouncementCard.tsx  Card.tsx  Footer.tsx  Header.tsx  Icon.tsx  NavigationCard.tsx  SectionTitle.tsx  VacancyCard.tsx
frontend/src/pages/: Home.tsx  InfoStand.tsx  Vacancies.tsx  VacancyDetail.tsx
nginx/: .htpasswd  nginx.conf
nginx/conf.d/: admin.conf  api.conf  frontend.conf
